# ExposedObserve

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FORK.md  README.md  SECURITY.md  build.sh  deny.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker-publish.yml
docker/: mock-oauth2-config.json
src/: main.rs
src/cli/basic/: cli.rs
src/cli/data/: cli.rs  mod.rs
src/common/utils/: redirect_response.rs
src/config/: build.rs
src/config/src/meta/: cluster.rs  search.rs
src/config/src/utils/: sql.rs
src/handler/http/auth/: ext_validator.rs  jwt.rs  mod.rs  validator.rs
src/handler/http/request/: ext_auth.rs  mod.rs
src/handler/http/router/: mod.rs  openapi.rs  ui.rs
src/migration/: pipeline_func.rs
src/oidc/: Cargo.toml
src/oidc/src/: client.rs  config.rs  cookies.rs  errors.rs  http.rs  lib.rs  models.rs  session.rs  utils.rs
src/service/: ext_users.rs  mod.rs
src/service/alerts/scheduler/: handlers.rs
src/service/db/: user.rs
src/service/github/: client.rs
src/service/github/adapters/: mod.rs  pywhat.rs
src/super_cluster_queue/: meta.rs
tests/: integration_test.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: aws-exports.ts
web/src/components/: Header.vue
web/src/composables/: useLogs.ts
web/src/layouts/: MainLayout.vue
web/src/locales/: index.ts
web/src/services/: oidc_auth.ts
web/src/stores/: index.ts
web/src/utils/: oidcutils.ts
web/src/views/: About.vue  Login.spec.ts  Login.vue
(+25 files in other folders)
